--- a/src/company-pannel/pages/create_job/create_job.css
+++ b/src/company-pannel/pages/create_job/create_job.css
@@ -140,12 +140,14 @@
     min-height: 100vh; /* Makes sure the modal takes up full viewport height */
 }
 
-.no-jobs-container {
+
+.no-jobs-Created-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0rem;
-    height: 100vh;
+    margin-left:24%;
+    margin-right: 24%;
+    height: 60vh;
     text-align: center;
     font-size: 2rem;
     color: #555;
@@ -153,7 +155,7 @@
     opacity: 0.8;
 }
 
-.no-jobs-container span {
+.no-jobs-Created-container span {
     padding: 20px;
     border: 2px solid #3b96e1;
     border-radius: 8px;
@@ -161,6 +163,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     color: #3b96e1;
 }
+
 .customtable-css .modal-dialog {
     max-width: 60%;
 }
@@ -200,3 +203,14 @@
     }
    
 }
+
+
+@media (min-width:300px) and (max-width:736px) {
+    .no-jobs-Created-container{
+       
+        margin-left:5%;
+        margin-right: 5%;        
+    }
+   
+}
+
