--- a/src/LandingPage2.jsx/Form/Form.css
+++ b/src/LandingPage2.jsx/Form/Form.css
@@ -88,7 +88,7 @@ position: relative;
      }
 
 
-@media (max-width: 575.98px) {
+@media (max-width: 1018px) {
     .heading_container{
        margin-left: -10px;
        margin-top:-10px;
@@ -130,6 +130,7 @@ position: relative;
         margin-top:5px;
         align-items: center;
         text-align: center;
+        margin-left: -30px;
      }
 
      .heading_container{
